...
            android:hint="Password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="login"
            android:id="@+id/btn_login"
            android:layout_marginTop="10dp"
            android:textColor="#fff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
